# app/controllers.go
@@ -28,6 +28,83 @@ func initService(service *goa.Service) {
 	service.Decoder.Register(goa.NewJSONDecoder, "*/*")
 }
 
+// AuthController is the controller interface for the Auth actions.
+type AuthController interface {
+	goa.Muxer
+	Login(*LoginAuthContext) error
+}
+
+// MountAuthController "mounts" a Auth resource controller on the given service.
+func MountAuthController(service *goa.Service, ctrl AuthController) {
+	initService(service)
+	var h goa.Handler
+	service.Mux.Handle("OPTIONS", "/api/v1/login", ctrl.MuxHandler("preflight", handleAuthOrigin(cors.HandlePreflight()), nil))
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewLoginAuthContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		// Build the payload
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*LoginAuthPayload)
+		} else {
+			return goa.MissingPayloadError()
+		}
+		return ctrl.Login(rctx)
+	}
+	h = handleAuthOrigin(h)
+	service.Mux.Handle("POST", "/api/v1/login", ctrl.MuxHandler("login", h, unmarshalLoginAuthPayload))
+	service.LogInfo("mount", "ctrl", "Auth", "action", "Login", "route", "POST /api/v1/login")
+}
+
+// handleAuthOrigin applies the CORS response headers corresponding to the origin.
+func handleAuthOrigin(h goa.Handler) goa.Handler {
+
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		origin := req.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			return h(ctx, rw, req)
+		}
+		if cors.MatchOrigin(origin, "http://localhost:8080/swagger") {
+			ctx = goa.WithLogContext(ctx, "origin", origin)
+			rw.Header().Set("Access-Control-Allow-Origin", origin)
+			rw.Header().Set("Vary", "Origin")
+			rw.Header().Set("Access-Control-Expose-Headers", "X-Time")
+			rw.Header().Set("Access-Control-Max-Age", "600")
+			rw.Header().Set("Access-Control-Allow-Credentials", "true")
+			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				rw.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, PATCH, DELETE")
+			}
+			return h(ctx, rw, req)
+		}
+
+		return h(ctx, rw, req)
+	}
+}
+
+// unmarshalLoginAuthPayload unmarshals the request body into the context request data Payload field.
+func unmarshalLoginAuthPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+	payload := &loginAuthPayload{}
+	if err := service.DecodeRequest(req, payload); err != nil {
+		return err
+	}
+	if err := payload.Validate(); err != nil {
+		// Initialize payload with private data structure so it can be logged
+		goa.ContextRequest(ctx).Payload = payload
+		return err
+	}
+	goa.ContextRequest(ctx).Payload = payload.Publicize()
+	return nil
+}
+
 // SamplesController is the controller interface for the Samples actions.
 type SamplesController interface {
 	goa.Muxer
@@ -63,9 +140,10 @@ func MountSamplesController(service *goa.Service, ctrl SamplesController) {
 		}
 		return ctrl.Add(rctx)
 	}
+	h = handleSecurity("jwt", h, "api:access")
 	h = handleSamplesOrigin(h)
 	service.Mux.Handle("POST", "/api/v1/samples/", ctrl.MuxHandler("add", h, unmarshalAddSamplesPayload))
-	service.LogInfo("mount", "ctrl", "Samples", "action", "Add", "route", "POST /api/v1/samples/")
+	service.LogInfo("mount", "ctrl", "Samples", "action", "Add", "route", "POST /api/v1/samples/", "security", "jwt")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -79,9 +157,10 @@ func MountSamplesController(service *goa.Service, ctrl SamplesController) {
 		}
 		return ctrl.Delete(rctx)
 	}
+	h = handleSecurity("jwt", h, "api:access")
 	h = handleSamplesOrigin(h)
 	service.Mux.Handle("DELETE", "/api/v1/samples/:id", ctrl.MuxHandler("delete", h, nil))
-	service.LogInfo("mount", "ctrl", "Samples", "action", "Delete", "route", "DELETE /api/v1/samples/:id")
+	service.LogInfo("mount", "ctrl", "Samples", "action", "Delete", "route", "DELETE /api/v1/samples/:id", "security", "jwt")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -95,9 +174,10 @@ func MountSamplesController(service *goa.Service, ctrl SamplesController) {
 		}
 		return ctrl.List(rctx)
 	}
+	h = handleSecurity("jwt", h, "api:access")
 	h = handleSamplesOrigin(h)
 	service.Mux.Handle("GET", "/api/v1/samples/", ctrl.MuxHandler("list", h, nil))
-	service.LogInfo("mount", "ctrl", "Samples", "action", "List", "route", "GET /api/v1/samples/")
+	service.LogInfo("mount", "ctrl", "Samples", "action", "List", "route", "GET /api/v1/samples/", "security", "jwt")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -111,9 +191,10 @@ func MountSamplesController(service *goa.Service, ctrl SamplesController) {
 		}
 		return ctrl.Show(rctx)
 	}
+	h = handleSecurity("jwt", h, "api:access")
 	h = handleSamplesOrigin(h)
 	service.Mux.Handle("GET", "/api/v1/samples/:id", ctrl.MuxHandler("show", h, nil))
-	service.LogInfo("mount", "ctrl", "Samples", "action", "Show", "route", "GET /api/v1/samples/:id")
+	service.LogInfo("mount", "ctrl", "Samples", "action", "Show", "route", "GET /api/v1/samples/:id", "security", "jwt")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -133,9 +214,10 @@ func MountSamplesController(service *goa.Service, ctrl SamplesController) {
 		}
 		return ctrl.Update(rctx)
 	}
+	h = handleSecurity("jwt", h, "api:access")
 	h = handleSamplesOrigin(h)
 	service.Mux.Handle("PATCH", "/api/v1/samples/:id", ctrl.MuxHandler("update", h, unmarshalUpdateSamplesPayload))
-	service.LogInfo("mount", "ctrl", "Samples", "action", "Update", "route", "PATCH /api/v1/samples/:id")
+	service.LogInfo("mount", "ctrl", "Samples", "action", "Update", "route", "PATCH /api/v1/samples/:id", "security", "jwt")
 }
 
 // handleSamplesOrigin applies the CORS response headers corresponding to the origin.
