# swagger/swagger.yaml
@@ -5,7 +5,6 @@ definitions:
     example:
       detail: sample1の詳細
       name: sample1のタイトル
-      user_id: 12345
     properties:
       detail:
         description: detail of sample
@@ -15,16 +14,41 @@ definitions:
         description: name of sample
         example: sample1のタイトル
         type: string
-      user_id:
-        description: user id
-        example: 12345
-        format: int64
-        type: integer
     required:
-    - user_id
     - name
     - detail
     title: AddSamplesPayload
+    type: object
+  Auth:
+    description: Auth result (default view)
+    example:
+      token:
+        expired_at: "2019-01-31T00:00:00+09:00"
+        token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+    properties:
+      token:
+        $ref: '#/definitions/Token'
+    required:
+    - token
+    title: 'Mediatype identifier: application/vnd.auth+json; view=default'
+    type: object
+  LoginAuthPayload:
+    example:
+      email: sample@goa-sample.test.com
+      password: test1234
+    properties:
+      email:
+        description: name of sample
+        example: sample@goa-sample.test.com
+        type: string
+      password:
+        description: detail of sample
+        example: test1234
+        type: string
+    required:
+    - email
+    - password
+    title: LoginAuthPayload
     type: object
   Sample:
     description: sample detail (default view)
@@ -127,11 +151,30 @@ definitions:
       $ref: '#/definitions/Samples'
     title: 'Mediatype identifier: application/vnd.samples+json; type=collection; view=default'
     type: array
+  Token:
+    description: token (default view)
+    example:
+      expired_at: "2019-01-31T00:00:00+09:00"
+      token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+    properties:
+      expired_at:
+        description: 期限
+        example: "2019-01-31T00:00:00+09:00"
+        format: date-time
+        type: string
+      token:
+        description: token value
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+        type: string
+    required:
+    - token
+    - expired_at
+    title: 'Mediatype identifier: application/vnd.token+json; view=default'
+    type: object
   UpdateSamplesPayload:
     example:
       detail: sample1の詳細
       name: sample1のタイトル
-      user_id: 12345
     properties:
       detail:
         description: detail of sample
@@ -141,13 +184,7 @@ definitions:
         description: name of sample
         example: sample1のタイトル
         type: string
-      user_id:
-        description: name of sample
-        example: 12345
-        format: int64
-        type: integer
     required:
-    - user_id
     - name
     - detail
     title: UpdateSamplesPayload
@@ -195,16 +232,43 @@ info:
   title: The Sample API
   version: v1
 paths:
+  /api/v1/login:
+    post:
+      operationId: auth#login
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/LoginAuthPayload'
+      produces:
+      - application/vnd.auth+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Auth'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      - https
+      summary: login auth
+      tags:
+      - auth
   /api/v1/samples/:
     get:
-      description: 複数
+      description: |-
+        複数
+
+        Required security scopes:
+          * `api:access`
       operationId: samples#list
-      parameters:
-      - description: user id
-        in: query
-        name: user_id
-        required: true
-        type: integer
       produces:
       - application/vnd.goa.error
       - application/vnd.samples+json; type=collection
@@ -217,16 +281,27 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
       - http
       - https
+      security:
+      - jwt:
+        - api:access
       summary: list samples
       tags:
       - samples
     post:
-      description: 追加
+      description: |-
+        追加
+
+        Required security scopes:
+          * `api:access`
       operationId: samples#add
       parameters:
       - in: body
@@ -246,17 +321,28 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
       - http
       - https
+      security:
+      - jwt:
+        - api:access
       summary: add samples
       tags:
       - samples
   /api/v1/samples/{id}:
     delete:
-      description: 削除
+      description: |-
+        削除
+
+        Required security scopes:
+          * `api:access`
       operationId: samples#delete
       parameters:
       - description: sample id
@@ -273,16 +359,27 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
       - http
       - https
+      security:
+      - jwt:
+        - api:access
       summary: delete samples
       tags:
       - samples
     get:
-      description: 単数
+      description: |-
+        単数
+
+        Required security scopes:
+          * `api:access`
       operationId: samples#show
       parameters:
       - description: sample id
@@ -302,16 +399,27 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
       - http
       - https
+      security:
+      - jwt:
+        - api:access
       summary: show samples
       tags:
       - samples
     patch:
-      description: 更新
+      description: |-
+        更新
+
+        Required security scopes:
+          * `api:access`
       operationId: samples#update
       parameters:
       - description: sample id
@@ -333,11 +441,18 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
       - http
       - https
+      security:
+      - jwt:
+        - api:access
       summary: update samples
       tags:
       - samples
@@ -397,4 +512,14 @@ responses:
 schemes:
 - http
 - https
+securityDefinitions:
+  jwt:
+    description: |2-
+
+
+      **Security Scopes**:
+        * `api:access`: API access
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
